<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circular_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:elevation="1dp"
        android:src="@drawable/group_icon"
        app:civ_shadow="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <View
        android:id="@+id/viewback"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/bottomsheet_background"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/groupname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:fontFamily="@font/alegreya"
        android:lines="1"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:text="@string/group_name"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/circular_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/circular_image"
        app:layout_constraintTop_toTopOf="@+id/viewback"
        app:layout_constraintVertical_bias="0.375" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_admin"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintEnd_toStartOf="@+id/adminname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/circular_image"
        app:layout_constraintTop_toBottomOf="@id/groupname"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/adminname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_name"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="@+id/groupname"
        app:layout_constraintTop_toBottomOf="@id/groupname"
        app:layout_constraintVertical_bias="0.37" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="40dp"
        android:background="#B1AEAE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupname"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/group_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:maxLength="250"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:text="@string/group_description"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="40dp"
        android:background="#B1AEAE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_description"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/private_or_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="59dp"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:text="@string/this_group_is_private"
        android:textColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_description"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="Cancel"
        android:textColor="#706B6B"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/button_three"
        android:paddingHorizontal="10dp"
        android:text="@string/request_to_join_or_not"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/private_or_public"
        app:layout_constraintVertical_bias="0.428" />

</androidx.constraintlayout.widget.ConstraintLayout>